<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/layout_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indonesia"
                    style="@style/TextTitle"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/total"
                    android:padding="15dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_positif"
                        style="@style/TitleStat"/>
                    <TextView
                        android:id="@+id/txt_positif_indo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1,670"
                        style="@style/NumbStat"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orang"
                        style="@style/TitleStat"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:baselineAligned="false"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/sembuh"
                        android:layout_weight="1"
                        android:padding="15dp"
                        android:layout_marginEnd="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_sembuh"
                            style="@style/TitleStat"/>
                        <TextView
                            android:id="@+id/txt_sembuh_indo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="1,670"
                            style="@style/NumbStat"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/orang"
                            style="@style/TitleStat"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/tiada"
                        android:layout_weight="1"
                        android:padding="15dp"
                        android:layout_marginStart="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_meninggal"
                            style="@style/TitleStat"/>
                        <TextView
                            android:id="@+id/txt_meninggal_indo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="1,670"
                            style="@style/NumbStat"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/orang"
                            style="@style/TitleStat"/>
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_provinsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_per_provinsi"
                    style="@style/BtnPrimary"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/global_dunia"
                    style="@style/TextTitle"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/total"
                    android:padding="15dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_positif"
                        style="@style/TitleStat"/>
                    <TextView
                        android:id="@+id/txt_positif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1,670"
                        style="@style/NumbStat"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orang"
                        style="@style/TitleStat"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:baselineAligned="false"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/sembuh"
                        android:layout_weight="1"
                        android:padding="15dp"
                        android:layout_marginEnd="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_sembuh"
                            style="@style/TitleStat"/>
                        <TextView
                            android:id="@+id/txt_sembuh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="1,670"
                            style="@style/NumbStat"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/orang"
                            style="@style/TitleStat"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/tiada"
                        android:layout_weight="1"
                        android:padding="15dp"
                        android:layout_marginStart="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_meninggal"
                            style="@style/TitleStat"/>
                        <TextView
                            android:id="@+id/txt_meninggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="1,670"
                            style="@style/NumbStat"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/orang"
                            style="@style/TitleStat"/>
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_negara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_per_negara"
                    style="@style/BtnPrimary"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:id="@+id/txt_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    tools:text="Update terakhir : 01  April 2020 22:29:14 WIB"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/sumber_data"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>