<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreyLight">

        <TextView
            android:id="@+id/txt_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintBottom_toBottomOf="@+id/txt_no"
            app:layout_constraintStart_toEndOf="@+id/txt_no"
            app:layout_constraintTop_toTopOf="@+id/txt_no"
            tools:text="DKI Jakarta" />

        <LinearLayout
            android:id="@+id/layout_positif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/total"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/positif"
                android:textColor="@color/colorWhite"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/txt_positif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                tools:text="901"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_sembuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/sembuh"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toEndOf="@+id/layout_positif"
            app:layout_constraintTop_toTopOf="@+id/layout_positif">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sembuh"
                android:textColor="@color/colorWhite"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/txt_sembuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                tools:text="78" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_meninggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/tiada"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toEndOf="@+id/layout_sembuh"
            app:layout_constraintTop_toTopOf="@+id/layout_sembuh">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/meninggal"
                android:textColor="@color/colorWhite"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/txt_meninggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                tools:text="78" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>